# unilog

./: CMakeLists.txt  README.md
core/: essentials.h  unilog_main.cpp  unilog_main.h
core/log_to_console/: log_to_console.cpp  log_to_console.h
core/log_to_file/: log_to_file.cpp  log_to_file.h
